--- a/sept2017_storms/September 2017 Storms.ipynb
+++ b/sept2017_storms/September 2017 Storms.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,8 +64,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Time_UT</th>\n",
-       "      <th>SymH_nT</th>\n",
+       "      <th>EPOCH_TIME_yyyy-mm-ddThh:mm:ss.sssZ</th>\n",
+       "      <th>SYM/H_INDEX_nT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -130,23 +130,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Time_UT  SymH_nT\n",
-       "0     2017-09-04 00:00:00+00:00        5\n",
-       "1     2017-09-04 00:01:00+00:00        5\n",
-       "2     2017-09-04 00:02:00+00:00        5\n",
-       "3     2017-09-04 00:03:00+00:00        4\n",
-       "4     2017-09-04 00:04:00+00:00        4\n",
-       "...                         ...      ...\n",
-       "14396 2017-09-13 23:56:00+00:00      -10\n",
-       "14397 2017-09-13 23:57:00+00:00      -10\n",
-       "14398 2017-09-13 23:58:00+00:00      -10\n",
-       "14399 2017-09-13 23:59:00+00:00      -10\n",
-       "14400 2017-09-14 00:00:00+00:00      -10\n",
+       "      EPOCH_TIME_yyyy-mm-ddThh:mm:ss.sssZ  SYM/H_INDEX_nT\n",
+       "0               2017-09-04 00:00:00+00:00               5\n",
+       "1               2017-09-04 00:01:00+00:00               5\n",
+       "2               2017-09-04 00:02:00+00:00               5\n",
+       "3               2017-09-04 00:03:00+00:00               4\n",
+       "4               2017-09-04 00:04:00+00:00               4\n",
+       "...                                   ...             ...\n",
+       "14396           2017-09-13 23:56:00+00:00             -10\n",
+       "14397           2017-09-13 23:57:00+00:00             -10\n",
+       "14398           2017-09-13 23:58:00+00:00             -10\n",
+       "14399           2017-09-13 23:59:00+00:00             -10\n",
+       "14400           2017-09-14 00:00:00+00:00             -10\n",
        "\n",
        "[14401 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "Timestamp('2017-09-04 00:00:00+0000', tz='UTC')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "[14401 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,15 +306,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Make a plot of the data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -342,20 +342,6 @@
     "\n",
     "ax.grid(True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
